--- a/index.html
+++ b/index.html
@@ -142,9 +142,12 @@
 
     // default example
     simplyCountdown('.simply-countdown-one', {
-        year: d.getFullYear(),
-        month: d.getMonth() + 1,
-        day: d.getDate()
+        year: 2023,
+        month: 11,
+        day: 18,
+				hours: 17,
+				minutes: 0,
+    		seconds: 0,
     });
 
     //jQuery example
